# line-surface-reconstruction

./: .gitignore  CMakeLists.txt  README.md  demo.sh  main.cpp  main_eval.cpp  main_param.cpp  main_ransac.cpp
data/Andalusian/: input_lines_from_residuals.json
full_examples/: NvmRansacOutToResidualReconsInput.py  NvmToRansacInput.py  colmapRansacOutToResidualReconsInput.py  colmapToRANSACInput.py
full_examples/from_nvm/: README.md
full_examples/from_raw_images/: README.md
full_examples/generic_functions/: TestRunner.py  parse_files.py
lib/WeightComputation/: CMakeLists.txt  WeightComputation.cpp  WeightComputation.h
lib/geometricTypes/: CMakeLists.txt  Line.cpp  Line.h  LineSet.cpp  LineSet.h  ObjectSet.h  Primitive.cpp  Primitive.h  PrimitiveSet.cpp  PrimitiveSet.h  cgalTypes.h  jsonInput.h  jsonTools.cpp  jsonTools.h
lib/meshMetrics/: CMakeLists.txt  Triangle.cpp  Triangle.h
lib/planeArrangement/: ArrangementToMosek.cpp  ArrangementToMosek.h  CMakeLists.txt  PlaneArrangement.cpp  PlaneArrangement.h  PolyhedronBuilder.h
lib/ransacOnLines/: CMakeLists.txt  Line.cpp  Line.h  Plane.cpp  Plane.h  RANSAC.cpp  RANSAC.h  eigenTypedefs.h  geometric_functions.cpp  geometric_functions.h  ioRansac.cpp  ioRansac.h
test/: mainTest.cpp  plane_arrangement_fixture.h  plane_arrangement_weight_fixture.h  test_geometric_types.cpp  test_plane_arrangement.cpp  test_ransac.cpp  test_weight_computation.cpp
