# Geometric Types
add_library(GeometricTypes STATIC Line.cpp Line.h
                                  Primitive.cpp Primitive.h
                                  ObjectSet.h jsonInput.h
                                  LineSet.cpp LineSet.h
                                  PrimitiveSet.cpp PrimitiveSet.h
                                  jsonTools.cpp jsonTools.h
                                  cgalTypes.h)
